<resources>
    <string name="app_name">DChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">864263934028908</string>
    <string name="fb_login_protocol_scheme">fb864263934028908</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="textView_login">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><i>Forgot password ?</i></string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="remember_me">Remember me</string>
    <string name="create">create</string>
    <string name="user_name">User Name</string>
    <string name="status">Status</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_in_with_phone_number"><u>Sign in with phone number</u></string>
    <string name="your_account">Your Account</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="seen">Seen</string>
    <string name="not_seen">wait</string>
    <string name="Authentication_failed">Authentication failed</string>
    <string name="All_fields_are_required">All fields are required</string>
    <string name="please_wait">Please wait ...</string>
    <string name="you_want_to_log_out">You want to log out?</string>
    <string name="text_contents">There is no garbage collection in C, so if you don\'t explicitly free a chunk of memory, it will never get freed, even if there are no references to it. Maybe you come from a background in garbage collected languages, so it might be hard to change your way of thought, but it\'s always important to remember to \"manually\" free all resources in low-level languages like C.</string>
</resources>
